# PuriPuly-heart

./: .gitignore  AGENTS.md  LICENSE  README.md  build.spec  installer.iss  latency_test_output.txt  pyproject.toml  test_output.txt
.githooks/: pre-commit
prompts/: en_to_kr.txt  gemini.txt  kr_to_jp.txt  qwen.txt
src/ajebal_daera_translator/: __init__.py  main.py
src/ajebal_daera_translator/app/: __init__.py  headless_mic.py  headless_stdin.py  wiring.py
src/ajebal_daera_translator/config/: __init__.py  paths.py  prompts.py  settings.py
src/ajebal_daera_translator/core/: __init__.py  clock.py  language.py  updater.py
src/ajebal_daera_translator/core/audio/: __init__.py  format.py  ring_buffer.py  source.py
src/ajebal_daera_translator/core/llm/: __init__.py  provider.py
src/ajebal_daera_translator/core/orchestrator/: __init__.py  hub.py
src/ajebal_daera_translator/core/osc/: __init__.py  encoding.py  sender.py  smart_queue.py  udp_sender.py
src/ajebal_daera_translator/core/storage/: __init__.py  secrets.py
src/ajebal_daera_translator/core/stt/: __init__.py  backend.py  controller.py
src/ajebal_daera_translator/core/vad/: __init__.py  bundled.py  gating.py  silero.py
src/ajebal_daera_translator/data/: THIRD_PARTY_NOTICES.txt
src/ajebal_daera_translator/domain/: __init__.py  events.py  models.py
src/ajebal_daera_translator/providers/: __init__.py
src/ajebal_daera_translator/providers/llm/: __init__.py  gemini.py  qwen.py
src/ajebal_daera_translator/providers/stt/: __init__.py  alibaba_model_studio.py  deepgram.py  google_speech_v2.py  qwen_asr.py
src/ajebal_daera_translator/ui/: app.py  controller.py  event_bridge.py  theme.py
src/ajebal_daera_translator/ui/components/: bento_card.py  sidebar.py
src/puripuly_heart/: __init__.py  main.py
src/puripuly_heart/app/: __init__.py  headless_mic.py  headless_stdin.py  wiring.py
src/puripuly_heart/config/: paths.py  prompts.py  settings.py
src/puripuly_heart/core/: clock.py  language.py  updater.py
src/puripuly_heart/domain/: __init__.py  events.py  models.py
src/puripuly_heart/providers/: __init__.py
src/puripuly_heart/ui/: app.py  controller.py  event_bridge.py
tests/: conftest.py  test_alibaba_model_studio_backend.py  test_audio_format.py  test_cli_run_stdin.py  test_config_and_secrets.py  test_context_memory.py  test_domain_models.py  test_file_logging.py  test_gemini_provider.py  test_google_speech_v2_backend.py  test_headless_mic_pipeline.py  test_llm_semaphore.py  test_logs_view.py  test_orchestrator_pipeline.py  test_osc_udp_sender.py  test_prompt_pipeline.py  test_providers_import_smoke.py  test_qwen_provider.py  test_settings_prompt_switching.py  test_silero_vad_onnx.py  test_smart_osc_queue.py  test_smoke_imports.py  test_stt_controller.py  test_vad_gating.py  test_wiring_providers.py  test_wiring_secrets.py
tests/integration/: generate_audio.py  measure_latency.py  test_alibaba_stt_integration.py  test_deepgram_stt_integration.py  test_e2e_latency_measurement.py  test_google_stt_v2_integration.py  test_qwen_asr_llm_integration.py  test_qwen_asr_stt_integration.py  test_qwen_llm_integration.py  test_soniox_stt_integration.py
(+29 files in other folders)
