[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ajebal-daera-translator"
version = "0.1.0"
description = "VRChat real-time speech translation pipeline (STT → LLM → OSC)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0",
  "janus>=2.0",
  "cryptography>=41.0",
  "python-osc>=1.9.0",
  "sounddevice>=0.5.0",
  "onnxruntime>=1.18.0",
  "google-cloud-speech",
  "google-genai>=1.56.0",
  "grpcio",
  "dashscope",
  "websockets",
  "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -s"
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
